# SpicyPass

./: .gitignore  .travis.yml  BasedPassConfig.h.in  CMakeLists.txt  Makefile  README.md  SpicyPassConfig.h.in
.circleci/: config.yml
.github/workflows/: codeql.yml
.travis/: cmake-linux  flags-gcc.sh  flags.sh
astyle/: README.md
desktop/: spicypass.desktop
gui/: gui.glade
src/: based.cpp  based.hpp  cli.cpp  cli.hpp  crypto.cpp  crypto.hpp  gui.cpp  gui.hpp  load.cpp  load.hpp  password.cpp  password.hpp  spicy.cpp  spicy.hpp  util.cpp  util.hpp
